Fix z-indexes for map and burger icon

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -50,7 +50,7 @@ hr {
 	padding-right: 0;
 	height: 100%;
 	width: 100%;
-	z-index: -1;
+	z-index: 0;
 }
 
 #option-box-container {
@@ -68,5 +68,7 @@ hr {
 }
 
 #nav {
-    z-index: 1;
+    z-index: 1 !important;
+    position: relative;
+    left: 2px;
 }
